--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>HelloWorld</servlet-name>
-        <url-pattern>/HelloWorld</url-pattern>
+        <url-pattern>/HelloWorldImplService</url-pattern>
     </servlet-mapping>
 
 </web-app>
